--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>MN Family| Home </title>
+    <title><link rel="icon" href="images/666.jpg" type="x-icon">MN Family| Home </title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8"/>
     <meta name="keywords"
-          content=""/>
+          content="Methuvil Nalakath Family Page"/>
     <link rel="icon" href="images/666.jpg" type="x-icon">
 
     <script>
@@ -343,28 +343,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="overlay-w3pvt-test py-5">
         <div class="container py-md-5">
             <div class="test-info text-center">
-                <h3 class="my-md-2 my-3">Jenifer Burns</h3>
+                <!--<h3 class="my-md-2 my-3">Jenifer Burns</h3>-->
 
-                <ul class="list-unstyled clients mb-3">
-                    <li>
-                            <span class="fa fa-star"></span>
-                    </li>
-                    <li>
-                        <!--<a href="#">-->
-                            <span class="fa fa-star"></span>
-                        <!--</a>-->
-                    </li>
-                    <li>
-                        <!--<a href="#">-->
-                            <span class="fa fa-star"></span>
-                        <!--</a>-->
-                    </li>
-                    <li>
-                        <!--<a href="#">-->
-                            <span class="fa fa-star-half-o"></span>
-                        <!--gi-->
-                    </li>
-                </ul>
+                <!--<ul class="list-unstyled clients mb-3">-->
+                    <!--<li>-->
+                            <!--<span class="fa fa-star"></span>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--&lt;!&ndash;<a href="#">&ndash;&gt;-->
+                            <!--<span class="fa fa-star"></span>-->
+                        <!--&lt;!&ndash;</a>&ndash;&gt;-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--&lt;!&ndash;<a href="#">&ndash;&gt;-->
+                            <!--<span class="fa fa-star"></span>-->
+                        <!--&lt;!&ndash;</a>&ndash;&gt;-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--&lt;!&ndash;<a href="#">&ndash;&gt;-->
+                            <!--<span class="fa fa-star-half-o"></span>-->
+                        <!--&lt;!&ndash;gi&ndash;&gt;-->
+                    <!--</li>-->
+                <!--</ul>-->
                 <p><span class="fa fa-quote-left"></span>
                     "Our family is the compass that guides us.<br> Which inspires us to reach great heights, and our
                     comfort when we
