--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title><link rel="icon" href="images/666.jpg" type="x-icon">MN Family| Home </title>
+    <title>Methuvil Nalakath Family| Home </title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8"/>
