--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
-Author:W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 
 <!DOCTYPE html>
 <html lang="zxx">
@@ -14,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8"/>
     <meta name="keywords"
-          content="Methuvil Nalakath Family Page"/>
+          content="Methuvil Nalakath Family | Home"/>
     <link rel="icon" href="images/666.jpg" type="x-icon">
 
     <script>
@@ -26,6 +20,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             window.scrollTo(0, 1);
         }
     </script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
+
+
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -43,6 +53,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
     <!--SECOND BOOTSTRAP LINKS-->
+    <link href="css2/font-awesome.min.css" rel="stylesheet">
+    <!-- Font-Awesome-Icons-CSS -->
+    <!-- //Custom-Files -->
+
+    <!-- Web-Fonts -->
+    <link href="//fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&amp;subset=cyrillic,latin-ext,vietnamese"
+          rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Overlock:400,400i,700,700i,900,900i&amp;subset=latin-ext"
+          rel="stylesheet">
 </head>
 
 <body>
@@ -416,13 +435,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
 </section>
 
+
 <footer class="footer-content py-5">
     <div class="container-fluid py-lg-5 inner-sec-w3ls">
         <div class="row">
             <div class="col-lg-4 footer-top mt-md-0 mt-sm-5 pr-lg-5">
                 <h2>
                     <a class="navbar-brand" href="index.html">
-                        MN Fam</a>
+                        MN Family</a>
                 </h2>
                 <p class="my-3">Stay updated with our social accounts.</p>
                 <ul class="top-right-info foot-icons mt-5">
