--- a/index.html
+++ b/index.html
@@ -529,7 +529,8 @@
 <!-- //footer -->
 <footer>
     <div class="copy_right">
-        <p class="text-center text-wh py-sm-3 py-3 embed-responsive">© 2019 All rights reserved | Designed by <a
+        <p class="text-center text-wh py-sm-3 py-3 embed-responsive">© 2019 All rights reserved | Designed by 
+           <br><a
                 href="https://www.instagram.com/mn_shinas/?hl=en" <span style="color: red;"
                                                                         class="fa fa-instagram "></span></a>
             <a href="https://www.instagram.com/mn_shinas/?hl=en" style="color: black;">MN SHINAS</a>
